--- a/src/_head.html
+++ b/src/_head.html
@@ -5,6 +5,7 @@
   <!-- <meta name="robots" content="noindex, nofollow"> -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
   <link rel="stylesheet" href="/css/style.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <link rel="icon" href="/favicon.ico" />
   <link rel="icon" href="/img/icons/favicon/favicon-main.svg" type="image/svg+xml" />
   <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/favicon/apple-touch-icon.png" />
